# PMLDL_Assignment_1

./: .gitignore  README.md
code/deployment/: docker-compose.yml
code/deployment/api/: Dockerfile  main.py  pyproject.toml  training.py
code/deployment/app/: Dockerfile  main.py  pyproject.toml
code/models/: model.pth  prepare_single.py  pyproject.toml  training.py
