[project]
name = "models"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch==2.7.1",
    "torchvision==0.22.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
